MCP服务：添加MYSQL数据库读取API数据；